# final-tracker

./: .gitignore  README.md  ROS话题调试记录.md  迁移阶段1-TODO.md  迁移阶段2-TODO.md
airsim_bridge/: airsim_object_map.yaml  airsim_ros_bridge.py  dispaly.py
airsim_bridge/airsim/: client.py
airsim_bridge/airsim.egg-info/: PKG-INFO
airsim_bridge/multirotor/: cs_pwm.py  follow.py  follow_person.py  get_images.py  keyboard_control.py  num_py_cs.py
catkin_ws/src/Utils/quadrotor_msgs/: CMakeLists.txt
catkin_ws/src/d2p/: CMakeLists.txt  package.xml
catkin_ws/src/d2p/launch/: d2p.launch  start.launch
catkin_ws/src/d2p/rviz/: detector.rviz
catkin_ws/src/d2p/scripts/yolo_detector/: test.py  yolo_detector.py
catkin_ws/src/d2p/src/: main.cpp
catkin_ws/src/py_sim/: CMakeLists.txt  package.xml
catkin_ws/src/py_sim/scene/: quad.xml  scene_quad.xml
catkin_ws/src/py_sim/scripts/: quad_ros.py
catkin_ws/src/tracker/detection/target_ekf/: CMakeLists.txt
catkin_ws/src/tracker/detection/target_ekf/launch/: target_ekf.launch
catkin_ws/src/tracker/detection/target_ekf/src/: target_ekf_node.cpp
catkin_ws/src/tracker/mapping/config/: D435_sim.yaml  rviz_debug.rviz  rviz_sim.rviz
catkin_ws/src/tracker/mapping/launch/: mapping.launch  run.launch
catkin_ws/src/tracker/mapping/src/: mapping_nodelet.cpp
catkin_ws/src/tracker/planning/planning/include/prediction/: new_predicition.hpp  prediction.hpp
catkin_ws/src/tracker/planning/planning/launch/: bug.launch  mujoco_simulation.launch  planning.launch  realplanning.launch  simulation1.launch  target_debug.launch
catkin_ws/src/tracker/planning/planning/src/: planning_nodelet.cpp
catkin_ws/src/uam_controller/: CMakeLists.txt  README_CN.md  package.xml
catkin_ws/src/uam_controller/config/: controller_params.yaml  uam_config.yaml
catkin_ws/src/uam_controller/include/uam_controller/: controller.hpp  debug_macros.hpp  log_publisher.hpp
catkin_ws/src/uam_controller/launch/: uam_controller.launch
catkin_ws/src/uam_controller/scripts/: position_command_to_pose.py
catkin_ws/src/uam_controller/src/: controller_node.cpp  setpoint_publisher.cpp
sim/: quad_ros.py
sim/scene/: quad.xml  quad_gripper_v2.xml  scene_quad.xml  scene_quad_with_gripper.xml
uam_controller/: CMakeLists.txt  package.xml
uam_controller/cfg/: ControllerConfig.cfg
uam_controller/config/: controller_params.yaml  uam_config.yaml
uam_controller/launch/: uam_controller.launch
uam_controller/scripts/: control_monitor.py
uam_controller/src/: controller_node.cpp  setpoint_publisher.cpp
