<?xml version="1.0"?>
<package format="2">
  <name>d2p</name>
  <version>0.0.1</version>
  <description>The d2p package</description>
  <maintainer email="xingxun@todo.todo">xingxun</maintainer>
  <license>BSD</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 依赖项 -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>eigen</depend>

  <export></export>
</package>
