<?xml version="1.0"?>
<package format="2">
  <name>py_sim</name>
  <version>0.0.1</version>
  <description>MuJoCo-based quadrotor simulator bridge for ROS.</description>

  <maintainer email="circlemoon@example.com">circlemoon</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>quadrotor_msgs</depend>

  <export/>
</package>
